--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <div class="container d-flex justify-content-between">
 
       <div class="logo">
-        <img src="acm_logo_1.png" alt="" class="img-fluid">
+        <img src="acmw_logo.png" alt="" class="img-fluid">
         <h1><a href="index.html">ACM-W&nbspVIT-AP</a></h1>
       </div>
 
@@ -359,19 +359,19 @@
       <div class="faq-list">
         <ul>
           <li data-aos="fade-up">
-            <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" class="collapse" data-bs-target="#faq-list-1">Why should you become a member of ACM chapter ? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+            <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" class="collapse" data-bs-target="#faq-list-1">Why ACM-W is Started ? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
             <div id="faq-list-1" class="collapse show" data-bs-parent=".faq-list">
               <p>
-                When you become a member, you become a part of the dynamic changes that are transforming our world, by helping to shape the future of computing and enriching your knowledge with life-long learning resources.
+                ACM Celebrations bring women from your local region together for networking and build a feeling of community.<br>ACM-W provides financial and conference services to support to these conferences.
               </p>
             </div>
           </li>
 
           <li data-aos="fade-up" data-aos-delay="100">
-            <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#faq-list-2" class="collapsed">What are the major events lead by ACM ? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+            <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#faq-list-2" class="collapsed">When was ACM-W Started ? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
             <div id="faq-list-2" class="collapse" data-bs-parent=".faq-list">
               <p>
-                ACM  plans and organizes a wide range of events that include technical workshops, guest lectures, online events and various other competitions at VIT-AP
+                ACM Celebrations began in 2004 in India.<br>Today there are more than 30 Celebrations worldwide with more than 5000 participants per year.
               </p>
             </div>
           </li>
@@ -380,7 +380,7 @@
             <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#faq-list-3" class="collapsed">What are the outcomes of ACM chapter? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
             <div id="faq-list-3" class="collapse" data-bs-parent=".faq-list">
               <p>
-                ACM strengthens the computing profession’s collective voice through strong leadership, promotion of the highest standards, and recognition of technical excellence.                </p>
+                Each celebration is unique. But common activities include poster sessions, technical presentations, industry and graduate school panels, and career fairs.
             </div>
           </li>
 
