hero page change

--- a/index.html
+++ b/index.html
@@ -66,9 +66,11 @@
     
       <div class="text">
         <h2>Never Stop To</h2>
-        <h3>Exploring The World</h3>
+        <h3>Explore The World</h3>
         <p>
-          The ACM (Association for Computing Machinery), founded in 1947 is the largest and oldest international scientific and industrial computer society. Through its many Special Interest Groups, the ACM fosters research and communication in a broad range of computing areas.
+          ACM-W India seeks to take forward the task of the ACM community, but with a particular focus on the empowerment of women in computing in India.
+<br></p>
+<p>ACM-W supports, celebrates, and advocates internationally for the full engagement of women in all aspects of the computing field, providing a wide range of programs and services to ACM members and working in the larger community to advance the contributions of technical women.
         </p>
         <a class="nav-link scrollto" href="#about">Explore</a>
       </div>
